@@ -2066,8 +2066,9 @@ check_rtl (bool final_p)
 	   correctly decomposed.  LRA can generate reloads for
 	   decomposable addresses.  The decomposition code checks the
 	   correctness of the addresses.  So we don't need to check
-	   the addresses here.  */
-	if (insn_invalid_p (insn, false))
+	   the addresses here.  Don't call insn_invalid_p here, it can
+	   change the code at this stage.  */
+	if (recog_memoized (insn) < 0 && asm_noperands (PATTERN (insn)) < 0)
 	  fatal_insn_not_found (insn);
       }
 }
@@ -2266,13 +2267,12 @@ lra (FILE *f)
 
   init_insn_recog_data ();
 
-  /* We can not set up reload_in_progress because it prevents new
-     pseudo creation.  */
-  lra_in_progress = 1;
-
 #ifdef ENABLE_CHECKING
+  /* Some quick check on RTL generated by previous passes.  */
   check_rtl (false);
 #endif
+
+  lra_in_progress = 1;
 
   lra_live_range_iter = lra_coalesce_iter = 0;
   lra_constraint_iter = lra_constraint_iter_after_spill = 0;
